--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color:rgb(119, 0, 255);
     text-align: center;
-    font-family: "Times New Roman";
+    font-family: "Arial";
     font-size: 16px;
 
 
