--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,9 @@
 body
 {
+    background: #BABCFF;
+    background: -moz-linear-gradient(left, #BABCFF 0%, #E4BDFF 48%, #C58EA0 100%);
+    background: -webkit-linear-gradient(left, #BABCFF 0%, #E4BDFF 48%, #C58EA0 100%);
+    background: linear-gradient(to right, #BABCFF 0%, #E4BDFF 48%, #C58EA0 100%);
     color:rgb(119, 0, 255);
     text-align: center;
     font-family: "Arial";
@@ -12,8 +16,9 @@ body
 
 #cabecera
 {
-    background: #33A;
-    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    background: rgb(0, 0, 0);
+    -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
     color: white;
     font-weight: bold;
     margin: 0;
@@ -22,7 +27,7 @@ body
 
 #cabecera #tagline
 {
-    padding: 0 0 0 1em;
+    padding: 0 0 0 0em;
     font-weight: normal;
     font-size: 0.8em;
 }
@@ -46,4 +51,30 @@ body
 #post
 {
     padding: 1em;
+}
+
+#back2Top {
+    width: 40px;
+    line-height: 40px;
+    overflow: hidden;
+    z-index: 999;
+    display: none;
+    cursor: pointer;
+    -moz-transform: rotate(270deg);
+    -webkit-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+    position: fixed;
+    bottom: 50px;
+    right: 0;
+    background-color: #DDD;
+    color: #555;
+    text-align: center;
+    font-size: 30px;
+    text-decoration: none;
+}
+#back2Top:hover {
+    background-color: #DDF;
+    color: #000;
 }
