--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,6 +22,13 @@ body
     padding: 0.5em;
 }
 
+#fotocontenido
+{
+    
+    vertical-align: middle;
+
+}
+
 #cabecera #logo
 {
     width: 150px;
