--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ body
 
 #cabecera
 {
-    background: #FFCDF5 0%;
+    background: #F2C0FF 0%;
     -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 0px 0px 42px 12px #FFDBFE; 
     box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 0px 0px 42px 12px #FFDBFE;
     color: rgb(0, 0, 0);
