--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,71 +1,52 @@
-body
-{
-    background: #F2C0FF; 
-    color:rgb(0, 0, 0);
-    text-align: center;
-    font-family: "Calibri";
-    font-size: 19px;
-    margin: 0.5;
-    padding: 0.4;
-
-
+body{
+    background: #DAD4EC;
+    background: -moz-radial-gradient(center, #DAD4EC 0%, #F3E7E9 100%);
+    background: -webkit-radial-gradient(center, #DAD4EC 0%, #F3E7E9 100%);
+    background: radial-gradient(ellipse at center, #DAD4EC 0%, #F3E7E9 100%);
+	color:rgb(0, 0, 0);
+	text-align: center;
+	font-family: "Calibri";
+	font-size: 19px;
+	margin: 0.5;
+	padding: 0.4;
 }
-
-#cabecera
-{
-    background: #F2C0FF 0%;
-    -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 0px 0px 42px 12px #FFDBFE; 
-    box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 0px 0px 42px 12px #FFDBFE;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    margin: 0;
-    padding: 0.5em;
+#cabecera{
+	background: #F2C0FF 0%;
+	-webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 0px 0px 42px 12px #FFDBFE;
+	box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, 0px 0px 42px 12px #FFDBFE;
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+	margin: 0;
+	padding: 0.5em;
 }
-
-#fotocontenido
-{
-    
-    vertical-align: middle;
-
+#fotocontenido{
+	vertical-align: middle;
 }
-
-#cabecera #logo
-{
-    width: 150px;
-    vertical-align: middle;
+#cabecera #logo{
+	width: 150px;
+	vertical-align: middle;
 }
-
-#cabecera #tagline
-{
-    padding: 0 0 1 1em;
-    font-weight: normal;
-    font-size: 0.9em;
+#cabecera #tagline{
+	padding: 0 0 1 1em;
+	font-weight: normal;
+	font-size: 0.9em;
 }
-
-#container
-{
-    width: 80%;
-    padding: 1em;
-    text-align: center;
-    border-top: 5px solid #000000;
-    border-bottom: 5px solid #000000;
-    margin: 0 auto;
-
+#container{
+	width: 80%;
+	padding: 1em;
+	text-align: center;
+	border-top: 5px solid #000000;
+	border-bottom: 5px solid #000000;
+	margin: 0 auto;
 }
-
-#container h1
-{
-    font-size: 20px;
-    font-weight: bolder;
+#container h1{
+	font-size: 20px;
+	font-weight: bolder;
 }
-
-#post
-{   
-    padding: 1.5em;
-    text-align: center;
+#post{
+	padding: 1.5em;
+	text-align: center;
 }
-
-#footer
-{
+#footer{
 	text-align: center;
 }
